# obs-service-cargo-vendor-home-registry

./: CHANGELOG  CHANGELOG.md  CONTRIBUTORS.md  Cargo.toml  README.md  cargo_vendor_home_registry.service  cliff.toml  justfile  rustfmt.toml  vendor.toml
.cargo/: config.toml
.github/workflows/: ci.yml
src/: audit.rs  cli.rs  lib.rs  main.rs  opts.rs
tests/: cargo-vendor-home-registry.rs
