[package]
name = "obs-service-cargo-vendor-home-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
bzip2 = "0.4.4"
clap = { version = "4.5.16", features = ["derive"] }
flate2 = "1.0.32"
glob = "0.3.1"
infer = "0.16.0"
obs-service-cargo = { git = "https://github.com/Firstyear/obs-service-cargo/", version = "1.3.5" }
quick-xml = { version = "0.36.1", features = ["serialize", "overlapped-lists"] }
serde = { version = "1.0.208", features = ["derive"] }
tar = "0.4.41"
terminfo = "0.9.0"
toml = "0.8.19"
tracing = { version = "0.1.40", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.5.0"
xz2 = "0.1.7"
zstd = "0.13.2"

[lints.clippy]
# Enable some groups of clippy lints.
suspicious = "deny"
perf = "deny"
# Specific lints to enforce.
todo = "warn"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
await_holding_lock = "deny"
needless_pass_by_value = "deny"
trivially_copy_pass_by_ref = "deny"
disallowed_types = "deny"
manual_let_else = "deny"
unreachable = "allow"
unit_arg = "allow"

[profile.release]
lto = true          # Enable Link Time Optimization.
debug = true        # Include debug symbols. If you are going to complain for big binary sizes, there is a release-stripped option :P
codegen-units = 8   # Default. Little gains if set to 1 so why bother?
panic = 'abort'     # Abort on panic.
strip = false       # Strip symbols from binary.

[profile.release-stripped]
inherits = "release"
strip = true
