[package]
name = "obs-service-cargo-vendor-home-registry"
version = "0.1.4"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "help", "unstable-doc", "wrap_help"] }
terminfo = "0.9"
tracing = { version = "0.1", features = [
        "max_level_trace",
        "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libroast = "^5"
tempfile = "3.13"
rustsec = "0.30"
sha3 = { version = "0.11.0-pre.4" }
hex-literal = "0.4.1"
hex = "0.4.3"

[dev-dependencies]
rand = "0.8"
reqwest = "0.12"
tokio = { version = "1.41", features = ["full"] }
tokio-test = "0.4"
test-log = { version = "^0.2", features = ["trace"] }

[[bin]]
name = "cargo_vendor_home_registry"
path = "src/main.rs"

[lints.clippy]
# Enable some groups of clippy lints.
suspicious = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
# Specific lints to enforce.
todo = "warn"
unimplemented = "deny"
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
await_holding_lock = "deny"
needless_pass_by_value = "deny"
trivially_copy_pass_by_ref = "deny"
disallowed_types = "deny"
manual_let_else = "deny"
unreachable = "allow"
unit_arg = "allow"

[profile.release]
lto = true        # Enable Link Time Optimization.
debug = true      # Include debug symbols. If you are going to complain for big binary sizes, there is a release-stripped option :P
codegen-units = 8 # Default. Little gains if set to 1 so why bother?
panic = 'abort'   # Abort on panic.
strip = false     # Strip symbols from binary.

[profile.release-stripped]
inherits = "release"
strip = true

